<resources>
    <string name="empty_view_schedule">Nothing scheduled \n for this part of the day</string>
    <string name="empty_appointment_content">Tab the "+" \n to add your first \n appointment</string>
    <string name="empty_contact_content">Tab the "+" \n to add your first \n ICE</string>
    <string name="appointment_tittle">Appointment tittle</string>
    <string name="doctor">Hospital</string>
    <string name="selectCategory">select Location</string>
    <string name="clinic">Clinic</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_nav_drawer">Medipal</string>
    <string name="MainActivity">MediPAL</string>
    <string name="grid_button_margin">10dp</string>
    <string name="grid_layout_margin">10dp</string>
    <string name="grid_btn_padding">10dp</string>
    <string name="delete">delete</string>
    <string name="puffs">Puffs</string>
    <string name="units">units</string>
    <string name="teaspoon">teaspoon</string>
    <string name="tablespoon">tablespoon</string>
    <string name="patch">patch</string>
    <string name="mcg">mcg</string>
    <string name="l">l</string>
    <string name="spray">spray</string>
    <string name="meq">meq</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_personal_info">Personal Info</string>
    <string name="title_activity_add_health_bio">Add Symptom/Diagnosis</string>
    <string name="menuhistory">History</string>
    <string name="menuhistorylist">History List</string>
    <string name="filter">Select Filter</string>
    <string name="by_year">By Year</string>
    <string name="filterMedicine">Medicine</string>
    <string name="filterOther">Format</string>
    <string name="consumption_history">Consumption History</string>
    <string name="measurement_history">Measurement History</string>
    <string name="help_screen_faq">Help Screen - FAQ</string>
    <string name="nameFaq">FAQ</string>
    <string name="Help">Help</string>
    <string name="faqHelp">FAQ</string>
    <string name="order">" desc"</string>
    <string name="MeasurementList">Measurement</string>
    <string name="app_name">Medipal</string>
    <string name="action_settings">Settings</string>
    <string name="user_form">Enter Detail</string>
    <string name="userName">Name</string>
    <string name="userAddress">Address</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="dosage_pills">pills</string>
    <string name="dosage_cc">cc</string>
    <string name="dosage_ml">ml</string>
    <string name="dosage_gr">gm</string>
    <string name="dosage_mg">mg</string>
    <string name="dosage_drops">drops</string>
    <string name="dosage_pieces">pieces</string>
    <string name="dosage_puffs">puffs</string>
    <string name="dosage_units">units</string>
    <string name="dosage_teaspoon">teaspoon</string>
    <string name="dosage_tablespoon">tablespoon</string>
    <string name="dosage_patch">patch</string>
    <string name="dosage_mcg">mcg</string>
    <string name="dosage_l">l</string>
    <string name="dosage_meq">meq</string>
    <string name="dosage_spray">spray</string>
    <string name="action_save">save</string>
    <string name="threshold">Threshold</string>
    <string name="expiry_factor">Expiry Factor</string>
    <string name="next">NEXT</string>
    <string name="interval">Interval</string>
    <string name="self_apply">SEL</string>
    <string name="complete_course">COM</string>
    <string name="supplement">SUP</string>
    <string name="chronic">CHR</string>
    <string name="incidental">INC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_update">update</string>
    <string name="action_delete">Delete Med</string>
    <string name="faqQues1">What is Medipal app and how does it work?</string>
    <string name="faqAns1">Medipal app helps you to manage and take your medicine on time. Medipal allows your family, friends, doctors to aid (if you so choose) by being alerted in case of any emergency.</string>
    <string name="faqQues2">How do I add a medicine?</string>
    <string name="faqAns2">1. On the home page tap on the second  \'+\' from the top on the bottom right to  add medicine. \nOR \n1. Tap on the \'Side Menu\' on the top left corner \n3. Tap on \'My Medicine\' menu. Here you can see the list of all active Medicines. Tap the + icon on the right bottom to add a medicine</string>
    <string name="faqQues3">How do I add an appointment?</string>
    <string name="faqAns3">1. On the home page tap on the first \'+\' from the top on the bottom right to add appointment. Tap that icon and choose add appointment \n OR \n 1. Tap on the \'Side Menu\' on the top left corner \n 2. Tap on \'Appointment\' menu. Here you can see the list of all active appointments. Tap the + icon on the right bottom to add one</string>
    <string name="faqQues4">How do I set a reminder for the medicine?</string>
    <string name="faqAns4">On the \'Add medicine\' page choose the reminder option and set the time of the reminder. You will be notified on the scheduled time</string>
    <string name="faqQues5">How do I add a measurement and see the history of past measurements ?</string>
    <string name="faqAns5">1. Tap on the \'Side Menu\' on the top left corner \n 2. Tap on \'Measurement\' menu and add measurement \n 3. To view your past measurements tap on the \'History\' option in the side menu and tap on the \'Measurement History\'</string>
    <string name="faqQues6">How do I see the history of medicines taken?</string>
    <string name="faqAns6">1. Tap on the \'Side Menu\' on the top left corner \n 2. Tap on the \'History\' and choose \'Consumption History\' to view all the mediinces taken</string>
    <string name="pageName">NAME</string>
    <string name="btnApply">Apply</string>
    <string name="filterCategory">CategoryFilter</string>
    <string name="filterMed">MedicineFilter</string>
    <string name="filterMeasure">MeasurementTypeFilter</string>
    <string name="filterTakenOrMissed">FormatFilter</string>
    <string name="btnCancel">Cancel</string>
    <string name="Consumption">CONSUMPTION</string>
    <string name="Measurement">MEASUREMENT</string>
    <string name="None">None</string>
    <string name="errorNoRecord">No record found !</string>
    <string name="Systolic">Systolic</string>
    <string name="Pulse">Pulse</string>
    <string name="Temperature">Temperature</string>
    <string name="Weight">Weight</string>
    <string name="Diastolic">" Diastolic"</string>
    <string name="BloodPressure">Blood Pressure</string>
    <string name="deletePopupMsg">Are you sure you want to delete?</string>
    <string name="about_us_hint">An Application that manages all your appointments, medicines, personal details and health conditions along with your daily measurement feeds.</string>
    <string name="about_us_team">FT - 02</string>
    <string name="about_us_m1">Siddharth Deshmukh</string>
    <string name="ritesh_kumar">about_us_m2</string>
    <string name="about_us_m3">Medha Sharma</string>
    <string name="about_us_m4">Thushara Joseph</string>
    <string name="about_us_m5">Shubhanshu Gautam</string>
    <string name="about_us_m6">Mathura Krishnan</string>
    <string name="add_hb_save">Save</string>
    <string name="add_hb_condition_description">Condition Description</string>
    <string name="add_hb_start_date">Start Date</string>
    <string name="add_hb_condition">Condition</string>
    <string name="add_hb_allergy">Allergy</string>
    <string name="add_hb_descr_hint">Enter health description here</string>
    <string name="add_medi_hint_medicine_name">Medicine name</string>
    <string name="add_medi_hint_qty_issued">Quantity Issued</string>
    <string name="add_medi_hint_date_of_issue">Date of Issue</string>
    <string name="add_medi_hint_cat">Category</string>
    <string name="bp_sys_high">Sys(high)</string>
    <string name="bp_slash">/</string>
    <string name="bp_dia_low">Dia(Low)</string>
    <string name="bp_mmhg">mmHg</string>
    <string name="bp_hint">Systolic Normal Range : less than 120mmHg Diastolic Normal Range : less than 80mmhg</string>
    <string name="cur_med_desc">Description</string>
    <string name="cur_med_cat">Category</string>
    <string name="cur_med_exp">Expiry Date</string>
    <string name="cur_med_remind">Reminder</string>
</resources>
