<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFEF3A3"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0.03"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawablePadding="10dp"
        android:hint="@string/about_us_hint"
        android:textAlignment="textStart"
        android:textSize="20dp"
        android:typeface="serif" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="228dp"
        android:layout_height="34dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:drawableLeft="@mipmap/team"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:drawableTint="#FFED0C2A"
        android:hint="@string/about_us_team"
        android:textSize="20dp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:textStyle="normal"
        android:typeface="serif"
        android:hint="@string/about_us_m1"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:textStyle="normal"
        android:typeface="serif"
        android:hint="@string/ritesh_kumar"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:textStyle="normal"
        android:typeface="serif"
        android:hint="@string/about_us_m3"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:textStyle="normal"
        android:typeface="serif"
        android:hint="@string/about_us_m4"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:textStyle="normal"
        android:typeface="serif"
        android:hint="@string/about_us_m5"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:textStyle="normal"
        android:typeface="serif"
        android:hint="@string/about_us_m6"
        android:textSize="20dp"/>

</LinearLayout>
