<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_medicine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nus.iss.android.medipal.activity.AddMedicineActivity">

    <EditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:drawableLeft="@mipmap/med"
        android:drawableTint="#FFED0C2A"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/add_medi_hint_medicine_name"
        android:maxLength="50"
        />
    <EditText
        android:id="@+id/quantity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="3"
        android:hint="@string/add_medi_hint_qty_issued"/>
    <LinearLayout
        android:id="@+id/container_dosage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp">

        <!-- Label -->
        <EditText
            android:hint="Dosage"
            android:id="@+id/dosage_text"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:inputType="number"
            android:textSize="20dp" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_dosage"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/date_of_issue_text"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@mipmap/date"
        android:gravity="fill_vertical"
        android:text="@string/add_medi_hint_date_of_issue"
        android:drawableTint="#FFED0C2A"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/expiry_text"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:inputType="number"
        android:maxLength="2"
        android:hint="@string/expiry_factor"/>

    <LinearLayout
        android:id="@+id/container_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp">

        <!-- Label -->
        <TextView
            android:text="@string/add_medi_hint_cat"
            android:id="@+id/category_text"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="20dp"
            android:fontFamily="sans-serif" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/notes"
        android:hint="Symptoms/Medical Diagnosis"
        android:drawableTint="#FFED0C2A"
        android:maxLength="255"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20dp">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/remind_text"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="Reminder"
            android:textSize="20dp"
            />
        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/remind_switch"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reminder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reminder_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/datetime"
            android:text="Start Time"
            android:drawableTint="#FFED0C2A"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/interval_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/interval"
                android:inputType="number"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/frequency_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="frequency"
                android:inputType="number"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/threshold_reminder"
            android:layout_weight="1"
            android:text="Threshold Reminder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20dp"
            />
        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/threshold_remind_switch"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <EditText
        android:id="@+id/threshold_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="3"
        android:hint="@string/threshold"/>
</LinearLayout>
</ScrollView>